RESOLVED FIXED142828
[WK2] Log the number of network cache requests that we have never seen before
https://bugs.webkit.org/show_bug.cgi?id=142828
Summary [WK2] Log the number of network cache requests that we have never seen before
Chris Dumez
Reported 2015-03-18 09:42:29 PDT
Log the number of network cache requests that we have never seen before using diagnostic logging. Radar: <rdar://problem/19632130>
Attachments
Patch (6.04 KB, patch)
2015-03-18 09:45 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2015-03-18 09:45:03 PDT
WebKit Commit Bot
Comment 2 2015-03-18 10:51:29 PDT
Comment on attachment 248940 [details] Patch Clearing flags on attachment: 248940 Committed r181702: <http://trac.webkit.org/changeset/181702>
WebKit Commit Bot
Comment 3 2015-03-18 10:51:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.