[WK2] Log the number of network cache requests that we have never seen before https://bugs.webkit.org/show_bug.cgi?id=142828 <rdar://problem/19632130>

Reviewed by Antti Koivisto.

Source/WebCore:

Add diagnostic logging key for network cache efficacy logging.

* page/DiagnosticLoggingKeys.cpp:
(WebCore::DiagnosticLoggingKeys::neverSeenBeforeKey):
(WebCore::DiagnosticLoggingKeys::requestKey):
* page/DiagnosticLoggingKeys.h:

Source/WebKit2:

Log the number of network cache requests that we have never seen before
using diagnostic logging.

* NetworkProcess/cache/NetworkCacheStatisticsCocoa.mm:
(WebKit::NetworkCache::Statistics::recordNotUsingCacheForRequest):
(WebKit::NetworkCache::Statistics::recordRetrievalFailure):


Canonical link: https://commits.webkit.org/160855@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181702 268f45cc-cd09-0410-ab3c-d52691b4dbfc