Source/WebCore/page/DiagnosticLoggingKeys.h
@@ -69,6 +69,7 @@ public:
     static String navigationKey();
     WEBCORE_EXPORT static String networkCacheKey();
     static String networkKey();
+    WEBCORE_EXPORT static String neverSeenBeforeKey();
     static String noCacheKey();
     static String noCurrentHistoryItemKey();
     static String noDocumentLoaderKey();
@@ -95,6 +96,7 @@ public:
     static String reasonKey();
     static String reloadFromOriginKey();
     static String reloadKey();
+    WEBCORE_EXPORT static String requestKey();
     static String resourceKey();
     static String resourceRequestKey();
     static String resourceResponseKey();
